<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="extractor.com.helloworld.Exercicios"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout"
        android:id="@+id/button"
        android:layout_marginTop="10dp"
        android:onClick="onClickBtnPrimeiroExercicio"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtnSegundoExercicio"/>

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/table_layout"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtnTerceiroExercicio"/>

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtnFrameLayout"/>

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/list_view"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtnListView"/>

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/grid_view"
        android:id="@+id/button7"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtnGriView"/>
</LinearLayout>
